--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<div id="tacboard">
+<div id="tacboard" class="needCont">
 
     <form action="/input-price" name="tb"  id="tacboard-form">
        
