HELP IM TRAPPED IN CODE

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <div id="tacboard" class="needCont">
 
-    <form action="/input-price" name="tb"  id="tacboard-form">
+    <form action="/input-price" name="tb"  class="tacboard-form">
        
     <span id="or">OR</span><span> $ </span><input id="tac-input" name="price" placeholder="PRICE I'D PAY"><button type="button"  id="tacit">Ping Me</button>
     </form>
