pinkman is love

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <form action="/input-price" name="tb"  class="tacboard-form">
        
-    <span> $ </span><input id="tac-input" name="price" placeholder="PRICE I'D PAY"><button type="button"  id="tacit">Ping Me</button>
+    <span> OR </span><input id="tac-input" name="price" placeholder="$ PRICE I'D PAY"><button type="button"  id="tacit">Ping Me</button>
     </form>
 
 
