last one hopefully

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <div id="tacboard" class="needCont">
 
     <form action="/input-price" name="tb"  class="tacboard-form">
-       
-    <span> OR </span><input id="tac-input" name="price" placeholder="$ PRICE I'D PAY"><button type="button"  id="tacit"><img id="tac" src="https://cdn.rawgit.com/dish615/widgetTb/master/tac.png"></button>
+     <input id="invisible" name="url" style="display:none;">  
+    <span> OR </span><input id="tac-input" name="price" placeholder="$ PRICE I'D PAY"><button type="button"  id="tacit"><img id="tac" src="https://cdn.rawgit.com/dish615/widgetZ/master/tac.png"></button>
     </form>
 
 
