--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 
 <div id="tacboard" class="needCont">
 
-    <form action="/input-price" name="tb"  class="tacboard-form">
-      
-    <span> OR </span><input id="tac-input" name="price" placeholder="$ PRICE I'D PAY"><button type="button" id="tacit"><img id="tac" src="https://cdn.rawgit.com/dish615/TWidge/master/tac.png"></button>
-    </form>
-
-
-
-<iframe style="display:none;" src="http://localhost:3000/cookie-inst"></iframe>
+<iframe style="display:inline; border:none;" src="https://fad0c679.ngrok.io/cookie-inst">
+    
+</iframe>
 </div>
 
 
