--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <div id="tacboard" class="needCont">
 
-<iframe id="plzwork" style="display:inline; border:none;" src="https://fad0c679.ngrok.io/cookie-inst">
-    
+<iframe id="plzwork" style="display:inline; border:none; vertical-align: bottom; height: 40px; margin-left:-5px;" scrolling="no" src="https://fad0c679.ngrok.io/cookie-inst">
+    <div id="urlTest" style="display:none;"></div>
 </iframe>
 </div>
 
