--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <div id="tacboard" class="needCont">
 
-<iframe id="plzwork" style="display:inline; border:none; vertical-align: bottom; height: 50px; margin-left:-5px;" scrolling="no" src="http://localhost:3000/cookie-inst">
+<iframe id="plzwork" style="display:inline; border:none; vertical-align: bottom; height: 50px; margin-left:-5px;" scrolling="no" src="http://localhost:3000/current-url">
     
 </iframe>
 </div>
